Completion of Cumulative Dose Checking which covers issues: Lifetime Cumulative Dosing - Issue #58 Cumulative Dose Checking - Issue #88 Functionality for Lifetime Cumulative Doses - Issue #129 Entering Historical/Previous Dosing - Issue #59

--- a/app/js/COMS-Access.css
+++ b/app/js/COMS-Access.css
@@ -824,3 +824,17 @@ table.FlowsheetTable {
 .cdtEm {
 	font-weight: bold;
 }
+
+.TCDWarning table {
+	font-size: 70%;
+	margin: 0 auto;
+}
+
+.TCDWarning th, .TCDWarning td {
+	text-align: center;
+	font-weight: bold;
+	padding: 0 0.25em;
+}
+.TCDWarning td {
+	text-align: right;
+}
