--- a/app/js/COMS.css
+++ b/app/js/COMS.css
@@ -788,3 +788,17 @@ table.FlowsheetTable {
 	font-weight: bold;
 	color: red;
 }
+
+.TCDWarning table {
+	font-size: 70%;
+	margin: 0 auto;
+}
+
+.TCDWarning th, .TCDWarning td {
+	text-align: center;
+	font-weight: bold;
+	padding: 0 0.25em;
+}
+.TCDWarning td {
+	text-align: right;
+}
